# Distributed-Rate-Limiter

./: .gitignore  BUILD_FIX_CIVETWEB.md  CMakeLists.txt  DEBUGGING_REPORT.md  DEPENDENCY_SETUP.md  LICENSE  QUICK_START.md  README.md  WINDOWS_SETUP.md  docker-compose.yml
.github/workflows/: ci.yml  docker-image.yml
docker/: Dockerfile  prometheus.yml
docs/: design.md  openapi.yaml
grafana/: grafana.db
grafana/dashboards/: rate_limiter.json
proto/: ratelimit.proto
scripts/: bench_k6.js  install-deps-linux.sh  install-deps-msys2.sh  install-deps-vcpkg.sh
src/: backend_interface.h  client.cpp  metrics.cpp  metrics.h  ratelimiter_service_impl.cpp  ratelimiter_service_impl.h  redis_store.cpp  redis_store.h  server.cpp  token_bucket.h
tests/: service_test.cpp  token_bucket_test.cpp
